HelloUltraviolet/Fixtures/RejectedSource/FFI/UnwindOnNonFFIProcedure/Source/Main.uv
//! Rejected FFI specimen for unwind attributes on ordinary procedures.

#unwind("catch")
public procedure unwindOnNonFFIProcedureReference() -> i32 {
    return 0
}

